# libddwaf

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  BINDING_IMPL_NOTES.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE-3rdparty.csv  NOTICE  README.md  UPGRADING.md  build_toolchain.sh  common.hpp  compile_commands.json  libddwaf.def  libddwaf.version  version
benchmark/: CMakeLists.txt  build.sh  fixture_base.hpp  main.cpp  object_generator.cpp  object_generator.hpp  output_formatter.cpp  output_formatter.hpp  patch.bench  random.hpp  rule_parser.hpp  run_fixture.cpp  run_fixture.hpp  runner.cpp  runner.hpp  settings.hpp  utils.cpp  utils.hpp  yaml_helpers.cpp  yaml_helpers.hpp
benchmark/scenarios/: bool_equals_matcher.json  exact_match.json  exact_match_matcher.json  float_equals_matcher.json  global-benchmark-no-processors.json  global-benchmark.json  ip_match_matcher.json  is_sqli_matcher.json  is_xss_matcher.json  lowercase_transformer.json  phrase_match_matcher.json  phrase_match_matcher_enforce_word_boundary.json  regex_match.json  regex_match_case_insensitive_option.json  regex_match_lowercase_transformer.json  regex_match_matcher.json  regex_match_matcher_case_insensitive_flag.json  regex_match_matcher_case_insensitive_option.json  regex_match_matcher_lowercase_transformer.json  remove_nulls_transformer.json  ruleset_1.10.0.json  schema_extraction.json  schema_extraction_processor.json  signed_equals_matcher.json  string_equals.json  string_equals_matcher.json  unsigned_equals_matcher.json
benchmark/scripts/: README.md  build_with_pgo.sh  build_with_pgo_and_bolt.sh
examples/: CMakeLists.txt  attack.cpp  example.cpp  expression.yaml  operator.yaml  validate_schema.cpp  verify_rule.cpp  verify_ruleset.cpp  waf-cli.cpp
examples/common/: utils.hpp
fuzzer/: .gitignore  CMakeLists.txt  README.md  build.sh
fuzzer/common/: afl_wrapper.hpp  common.hpp  utils.hpp
fuzzer/docker/: Dockerfile  build.sh  minify_corpus.sh  run_fuzzers.sh
fuzzer/global/: README.md  build.sh  run.sh
fuzzing/: CMakeLists.txt  Dockerfile  build.sh  run.sh
fuzzing/data/: regex.json
fuzzing/scripts/: build_corpus.py  build_dict.py  clean.sh  merge_corpus.sh  show_coverage.sh
fuzzing/src/: ddwaf_interface.cpp  ddwaf_interface.hpp  ddwaf_object_builder.cpp  ddwaf_object_builder.hpp  fuzzer.cpp  helpers.cpp  helpers.hpp  interface.cpp  interface.hpp  main.cpp  object_builder.cpp  object_builder.hpp
perf/: CMakeLists.txt  bench.cpp  benchcmp.cpp  benchmark.cpp  benchmerge.cpp  context_destroy_fixture.cpp  context_destroy_fixture.hpp  fixture_base.hpp  harness.cpp  main.cpp  object_generator.cpp  object_generator.hpp  output_formatter.cpp  output_formatter.hpp  random.cpp  random.hpp  rule_parser.cpp  rule_parser.hpp  run_fixture.cpp  run_fixture.hpp  runner.cpp  runner.hpp  settings.hpp  utils.cpp  utils.hpp  yaml_helpers.cpp  yaml_helpers.hpp
perf/common/: utils.cpp  utils.hpp
perf/scenarios/: regex_match.json  regex_match_case_insensitive_flag.json  regex_match_case_insensitive_option.json  regex_match_lowercase_transformer.json
perf/test_files/: convert.py  rules_node.json
smoketest/: CMakeLists.txt  smoke.c
tests/: CMakeLists.txt  TestAdditive.cpp  TestIP.cpp  TestInterface.cpp  TestIterator.cpp  TestManifest.cpp  TestMetrics.cpp  TestObfuscator.cpp  TestObject.cpp  TestPWArgsWrapper.cpp  TestPWManifest.cpp  TestParser.cpp  TestPowerWAF.cpp  TestProcessor.cpp  TestRegressions.cpp  TestRetriever.cpp  TestRule.cpp  TestSchema.cpp  TestTransform.cpp  TestValidator.cpp  action_mapper_builder_test.cpp  action_mapper_test.cpp  clock_test.cpp  collection_test.cpp  condition_test.cpp  context_allocator_test.cpp  context_test.cpp  custom_rules_test.cpp  event_schema_test.cpp  event_serializer_test.cpp  exclusion_filter_test.cpp  expression_builder_test.cpp  expression_test.cpp  input_filter_test.cpp  interface_test.cpp  ip_test.cpp  key_iterator_test.cpp  kv_iterator_test.cpp  lazy_string_test.cpp  lfi_detector_test.cpp  (+60 more)
tests/common/: base_utils.hpp  ddwaf_object_da.hpp  gtest_utils.cpp  gtest_utils.hpp  json_utils.cpp  json_utils.hpp  yaml_utils.cpp  yaml_utils.hpp
tests/condition/: exists_condition_test.cpp  lfi_detector_test.cpp  match_iterator_test.cpp  scalar_condition_test.cpp  scalar_negated_condition_test.cpp  shi_detector_array_test.cpp  shi_detector_string_test.cpp  shi_detector_test.cpp  sqli_detector_test.cpp  ssrf_detector_test.cpp
tests/exclusion/: common_test.cpp  input_filter_test.cpp  object_filter_test.cpp  rule_filter_test.cpp
tests/generator/: extract_schema_test.cpp
tests/json/: bad.json  convertors.json  duplicate_flow_report.json  duplicate_report.json  flowManager_bad.json  flow_bad.json  flow_good.json  flow_step.json  good.json  history_bad.json  keyaccess.json  manifest_bad.json  manifest_init.json  multistep_additive.json  options.json  powerwaf.json  powerwaf2.json  powerwaf_cache.json  powerwaf_config.json  processor_comp.json  processor_libinj_sql.json  processor_libinj_xss.json  processor_rx.json  ruleManager_bad.json  ruleManager_dup.json  rule_bad.json  rule_good.json  slow.json  transform_good.json
tests/matcher/: equals_test.cpp  exact_match.cpp  greater_than_test.cpp  ip_match_test.cpp  is_sqli_test.cpp  is_xss_test.cpp  lower_than_test.cpp  phrase_match_test.cpp  regex_match_test.cpp
tests/operation/: equals_test.cpp  exact_match.cpp  ip_match_test.cpp  is_sqli_test.cpp  is_xss_test.cpp  phrase_match_test.cpp  regex_match_test.cpp
tests/operator/: exists_condition_test.cpp
tests/processor/: extract_schema_test.cpp  fingerprint_test.cpp  (+2 more)
tools/: CMakeLists.txt  README.md  generate_documentation.py  infer_schema.cpp  infer_schema_bench.cpp  infer_schema_v2.cpp  infer_schema_v3.cpp  ip_match_benchmark.cpp  simplify_regex.cpp  simplify_ruleset.cpp  sql_tokenizer.cpp  validate_schema.cpp  verify_rule.cpp  verify_ruleset.cpp  waf_runner.cpp  waf_streamer.cpp
validator/: CMakeLists.txt  README.md  assert.hpp  main.cpp  ruleset.yaml  runner.cpp  runner.hpp  utils.cpp  utils.hpp
(+4281 files in other folders)
